--- a/practica_despliegue_algoritmos.ipynb
+++ b/practica_despliegue_algoritmos.ipynb
@@ -1066,7 +1066,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n",
         "# Configurar GradientBoostingClassifier\n",
         "clf = GradientBoostingClassifier(\n",
         "    n_estimators=25,\n",
@@ -1778,27 +1777,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -1810,21 +1788,216 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "# funciones.py\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import mlflow\n",
+        "import mlflow.sklearn\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.ensemble import GradientBoostingClassifier\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score, classification_report\n",
+        "\n",
+        "from sklearn.datasets import load_breast_cancer\n",
+        "\n",
+        "cancer = load_breast_cancer()\n",
+        "df = pd.DataFrame(cancer['data'], columns=cancer['feature_names'])\n",
+        "df['target'] = cancer['target']\n",
+        "\n",
+        "train, test = train_test_split(df, test_size=0.2)\n",
+        "test_target = test['target']\n",
+        "test[['target']].to_csv('test-target.csv', index=False)\n",
+        "del test['target']\n",
+        "test.to_csv('test.csv', index=False)\n",
+        "\n",
+        "features = [x for x in list(train.columns) if x != 'target']\n",
+        "x_raw = train[features]\n",
+        "y_raw = train['target']\n",
+        "\n",
+        "features = [x for x in list(train.columns) if x != 'target']\n",
+        "x_raw = train[features]\n",
+        "y_raw = train['target']\n",
+        "\n",
+        "x_train, x_test, y_train, y_test = train_test_split(x_raw, y_raw,\n",
+        "                                                            test_size=.20,\n",
+        "                                                            random_state=123,\n",
+        "                                                            stratify=y_raw)\n",
+        "\n",
+        "n_stimators = [2,10,20,30,50,80,100,130]\n",
+        "\n",
+        "mlflow_ui_process = subprocess.Popen(['mlflow', 'ui', '--port', '5000'])\n",
+        "\n",
+        "# Configurar GradientBoostingClassifier\n",
+        "clf = GradientBoostingClassifier(\n",
+        "    n_estimators=25,\n",
+        "    learning_rate=0.1,\n",
+        "    max_depth=3,\n",
+        "    random_state=32\n",
+        ")\n",
+        "\n",
+        "# Preprocesamiento\n",
+        "preprocessor = Pipeline(steps=[('scaler', StandardScaler())])\n",
+        "\n",
+        "# Pipeline final con GradientBoostingClassifier\n",
+        "model = Pipeline(steps=[('preprocessor', preprocessor),\n",
+        "                        ('GradientBoostingClassifier', clf)])\n",
+        "\n",
+        "model.fit(x_train, y_train)\n",
+        "\n",
+        "\n",
+        "accuracy_train = model.score(x_train, y_train)\n",
+        "accuracy_train\n",
+        "\n",
+        "accuracy_test = model.score(x_test, y_test)\n",
+        "\n",
+        "# Obtener las predicciones en el conjunto de prueba\n",
+        "y_test_pred = model.predict(x_test)\n",
+        "\n",
+        "# Calcular precision y recall\n",
+        "precision_test = precision_score(y_test, y_test_pred, average='weighted')  # Ajusta el promedio según el caso\n",
+        "recall_test = recall_score(y_test, y_test_pred, average='weighted')        # 'weighted' funciona bien para clases desbalanceadas\n",
+        "\n",
+        "print(f\"Precision (Test): {precision_test}\")\n",
+        "print(f\"Recall (Test): {recall_test}\")\n",
+        "\n",
+        "model.get_params()\n",
+        "\n",
+        "# Registrar en MLflow\n",
+        "mlflow.set_experiment('Cancer Classifier with Accuracy IA2')\n",
+        "\n",
+        "with mlflow.start_run(run_name='Primer entrenamiento con Random state 32'):\n",
+        "    # Registrar todos los hiperparámetros del modelo dinámicamente\n",
+        "    for param, value in model.get_params().items():\n",
+        "        mlflow.log_param(param, value)\n",
+        "\n",
+        "    # Registrar métricas\n",
+        "    mlflow.log_metric('accuracy_train', accuracy_train)\n",
+        "    mlflow.log_metric('accuracy_test', accuracy_test)\n",
+        "    mlflow.log_metric('precision_test', precision_test)\n",
+        "    mlflow.log_metric('recall_test', recall_test)\n",
+        "    \n",
+        "    # Registrar el modelo\n",
+        "    mlflow.sklearn.log_model(model, 'clf')\n",
+        "\n",
+        "print(\"Entrenamiento completado y métricas registradas en MLflow.\")\n"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import mlflow\n",
+        "import mlflow.sklearn\n",
+        "import subprocess\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.ensemble import GradientBoostingClassifier\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
+        "from sklearn.datasets import load_breast_cancer\n",
+        "\n",
+        "def load_dataset():\n",
+        "    \"\"\"Carga el dataset de cáncer de mama\"\"\"\n",
+        "    cancer = load_breast_cancer()\n",
+        "    df = pd.DataFrame(cancer['data'], columns=cancer['feature_names'])\n",
+        "    df['target'] = cancer['target']\n",
+        "    return df\n",
+        "\n",
+        "def data_treatment(df):\n",
+        "    \"\"\"Divide el dataset en conjuntos de entrenamiento y prueba\"\"\"\n",
+        "    # Split data into train and test sets\n",
+        "    train, test = train_test_split(df, test_size=0.2)\n",
+        "    test_target = test['target']\n",
+        "    test[['target']].to_csv('test-target.csv', index=False)\n",
+        "    del test['target']\n",
+        "    test.to_csv('test.csv', index=False)\n",
+        "\n",
+        "    features = [x for x in list(train.columns) if x != 'target']\n",
+        "    x_raw = train[features]\n",
+        "    y_raw = train['target']\n",
+        "    x_train, x_test, y_train, y_test = train_test_split(x_raw, y_raw,\n",
+        "                                                        test_size=.20,\n",
+        "                                                        random_state=123,\n",
+        "                                                        stratify=y_raw)\n",
+        "    return x_train, x_test, y_train, y_test\n",
+        "\n",
+        "def mlflow_tracking(nombre_job, x_train, x_test, y_train, y_test, n_estimators):\n",
+        "    \"\"\"Entrenamiento y seguimiento con MLflow\"\"\"\n",
+        "    mlflow_ui_process = subprocess.Popen(['mlflow', 'ui', '--port', '5000'])\n",
+        "    print(mlflow_ui_process)\n",
+        "    time.sleep(5)\n",
+        "    mlflow.set_experiment(nombre_job)\n",
+        "    \n",
+        "    for i in n_estimators:\n",
+        "        with mlflow.start_run() as run:\n",
+        "            clf = GradientBoostingClassifier(n_estimators=i,\n",
+        "                                             learning_rate=0.1,\n",
+        "                                             max_depth=3,\n",
+        "                                             random_state=123)\n",
+        "\n",
+        "            preprocessor = Pipeline(steps=[('scaler', StandardScaler())])\n",
+        "\n",
+        "            model = Pipeline(steps=[('preprocessor', preprocessor),\n",
+        "                                    ('GradientBoostingClassifier', clf)])\n",
+        "            model.fit(x_train, y_train)\n",
+        "            \n",
+        "            # Calcular las métricas\n",
+        "            accuracy_train = model.score(x_train, y_train)\n",
+        "            accuracy_test = model.score(x_test, y_test)\n",
+        "\n",
+        "            # Obtener las predicciones en el conjunto de prueba\n",
+        "            y_test_pred = model.predict(x_test)\n",
+        "\n",
+        "            # Calcular precision y recall\n",
+        "            precision_test = precision_score(y_test, y_test_pred, average='weighted')\n",
+        "            recall_test = recall_score(y_test, y_test_pred, average='weighted')\n",
+        "\n",
+        "            # Registrar en MLflow\n",
+        "            mlflow.log_metric('accuracy_train', accuracy_train)\n",
+        "            mlflow.log_metric('accuracy_test', accuracy_test)\n",
+        "            mlflow.log_metric('precision_test', precision_test)\n",
+        "            mlflow.log_metric('recall_test', recall_test)\n",
+        "            mlflow.log_param('n_estimators', i)\n",
+        "            mlflow.sklearn.log_model(model, 'clf-model')\n",
+        "            \n",
+        "    print(\"Se ha acabado el entrenamiento del modelo correctamente\")\n"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "from funciones import load_dataset, data_treatment, mlflow_tracking\n",
+        "\n",
+        "def main():\n",
+        "    # Cargar el dataset\n",
+        "    df = load_dataset()\n",
+        "\n",
+        "    # Preparar los datos de entrenamiento y prueba\n",
+        "    x_train, x_test, y_train, y_test = data_treatment(df)\n",
+        "\n",
+        "    # Lista de valores para n_estimators que quieres probar\n",
+        "    n_estimators = [2, 10, 20, 30, 50, 80, 100, 130]\n",
+        "\n",
+        "    # Nombre del trabajo para MLflow\n",
+        "    nombre_job = 'Cancer Classifier with Gradient Boosting'\n",
+        "\n",
+        "    # Llamar a la función de seguimiento y entrenamiento\n",
+        "    mlflow_tracking(nombre_job, x_train, x_test, y_train, y_test, n_estimators)\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n"
+      ]
     },
     {
       "cell_type": "markdown",
